Added files for new cohort review

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <p class="place__url-heading">URL</p>
                   <a href="https://www.ge.com/about-us" class="place__url" target="_blank">ge.com</a>
               </div>
-              <img src="./images/city_street.png" alt="Pic: New York" class="place__image">
+              <img src="./images/city_streets.png" alt="Pic: New York" class="place__image">
               <div class="place__text-container">
                   <p class="place__text">Not only famous for “The Big Apple,” the state of NY also has several other reasons for going down in history. 
                     Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been home to the world-famous General Electric Company.</p>
