fixed stray tag in markup

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               </a>
             </li>
             <li class="video__item">
-              <a href="https://www.youtube.com/watch?v=4mZY7uxb7Gc" class="video__link" target="_blank"></a>
+              <a href="https://www.youtube.com/watch?v=4mZY7uxb7Gc" class="video__link" target="_blank">
                 <img src="./images/youtube/Old_Faithful.png" alt="Pic: Old Faithful geyser" class="video__image">
                 <div class="video__content">
                   <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
