--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="video__content">
                   <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
                   <div class="video__text">
-                    <time class="video__duration">5:27</time>
+                    <p class="video__duration">5:27</p>
                     <h3 class="video__name">RAGBRAI, Iowa</h3>
                     <p class="video__author">Author: Ryan Van Duzer</p>
                   </div>
@@ -182,7 +182,7 @@
                 <div class="video__content">
                   <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
                     <div class="video__text">
-                      <time class="video__duration">2:36</time>
+                      <p class="video__duration">2:36</p>
                       <h3 class="video__name">Old Faithful Geyser, Wyoming</h3>
                       <p class="video__author">Author: David Ellis</p>
                     </div>
@@ -198,20 +198,20 @@
         <ul class="comments__container">
           <li class="comments__item">
             <img src="./images/Beatrice_Morrow_Cannady.png" alt="Image of Beatrice Morrow Cannady" class="comments__image">
-            <h2 class="comments__author">Beatrice Morrow Cannady, Portland, Oregon</h2>
+            <h3 class="comments__author">Beatrice Morrow Cannady, Portland, Oregon</h3>
             <p class="comments__quote">It is the duty of the Negro woman to see that in the home there are histories of her race 
             written by Negro historians.</p>
           </li>
           <li class="comments__item">
             <img src="./images/Jane_Addams.png" alt="Image of Jane Addams" class="comments__image">
-            <h2 class="comments__author">Jane Addams, Cedarville, Illinois</h2>
+            <h3 class="comments__author">Jane Addams, Cedarville, Illinois</h3>
             <p class="comments__quote">The good we secure for ourselves is precarious and uncertain, is floating in mid-air, until 
             it is secured for all of us
             and incorporated into our common life.</p>
           </li>
           <li class="comments__item">
             <img src="./images/Stephen_King.png" alt="Image of Stephen King" class="comments__image">
-            <h2 class="comments__author">Stephen King, born in Portland, Maine</h2>
+            <h3 class="comments__author">Stephen King, born in Portland, Maine</h3>
             <p class="comments__quote">Books are the perfect entertainment: no commercials, no batteries, hours of enjoyment for 
             each dollar spent.</p>
           </li>
