fixed horizontal scroll

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <p class="place__text">Thankfully, not only is Maine home to the very first European settlers on US territory in 
               the era of Vikings, but is also home to L.L. Bean, which is a great company to grab a super sturdy backpack 
               from for your 3_month expedition.</p>
-              <p class="place__text">Average cost: $80_100.</p>
+              <p class="place__text">Average cost: $80-100.</p>
             </div>
           </li>
           <li class="place">
@@ -100,7 +100,7 @@
               this state. Cycle by the Timberland headquarters in Stratham, and pick up a pair of rugged, waterproof boots 
               to keep your feet dry. Fitting for unpredictable weather you may be confronted by while passing through the 
               Appalachians. These boots are also better than cycling shoes when pitching a tent.</p>
-              <p class="place__text">Average cost: $100_150.</p>
+              <p class="place__text">Average cost: $100-150.</p>
             </div>
           </li>
           <li class="place">
@@ -168,11 +168,11 @@
                 <img src="./images/youtube/cyclists.png" alt="cyclists on trail" class="video__image">
                 <div class="video__content">
                   <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
-                  <div class="video__text">
+                  <!--<div class="video__text">-->
                     <p class="video__duration">5:27</p>
                     <h3 class="video__name">RAGBRAI, Iowa</h3>
                     <p class="video__author">Author: Ryan Van Duzer</p>
-                  </div>
+                 <!--</div>-->
                 </div>
               </a>
             </li>
@@ -181,11 +181,11 @@
                 <img src="./images/youtube/Old_Faithful.png" alt="Pic: Old Faithful geyser" class="video__image">
                 <div class="video__content">
                   <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
-                    <div class="video__text">
+                    <!--<div class="video__text">-->
                       <p class="video__duration">2:36</p>
                       <h3 class="video__name">Old Faithful Geyser, Wyoming</h3>
                       <p class="video__author">Author: David Ellis</p>
-                    </div>
+                    <!--</div>-->
                 </div>
               </a>
             </li>
