Fixed hover errors for review

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         selfie with a famous rock star, donating $1 to a billionaire to help eradicate polio in Africa, and even stopping by
         famous author Stephen King's house to say hi and asking him to sign your favorite book.</p>
         <ul class="values">
-          <li class="values__item"><span class="values__item_bold">Distance (miles)</span> 3,644</li>
-          <li class="values__item"><span class="values__item_bold">Travel time (days)</span> 22</li>
-          <li class="values__item"><span class="values__item_bold">Highest point (feet)</span> 9,613</li>
-          <li class="values__item"><span class="values__item_bold">Lowest point (feet)</span> -3</li>
+          <li><span class="values__item values__item_bold">Distance (miles)</span> 3,644</li>
+          <li><span class="values__item values__item_bold">Travel time (days)</span> 22</li>
+          <li><span class="values__item values__item_bold">Highest point (feet)</span> 9,613</li>
+          <li><span class="values__item values__item_bold">Lowest point (feet)</span> -3</li>
         </ul>
       </section>
       <!--photos in a grid-->
