fixed layout for project review again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Omar's third project at Practicum by Yandex">
+  <meta name="content" content="Omar's third project at Practicum by Yandex">
   <meta name="keywords" content="html, css, bem, flex, grid, responsive">
   <meta name="author" content="Omar Insurriaga">
   <title>From Portland to Portland</title>
@@ -62,7 +62,7 @@
           <li><img src="./images/photo-grid/desert_interstate.png" alt="Desert highway" class="grid__item"></li>
         </ul>
       </section>
-      <!--Content for different destinations; each has an image, title, link, and paragraphs.
+      <!--content for different destinations; each has an image, title, link, and paragraphs.
       The setup will be the same, just the content will change.-->
       <section class="places">
         <ul class="places__list"> 
@@ -74,7 +74,7 @@
               class="place__url" target="_blank">global.llbean.com</a>
             </div>
             <img src="./images/lighthouse.png" alt="Pic: Maine" class="place__image">
-            <div class="place__text_container">
+            <div class="place__text-container">
               <p class="place__text">Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly 
               underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be sure 
               not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.</p>
@@ -91,7 +91,7 @@
               <a href="https://www.timberland.com/timberlandpro.html" class="place__url" target="_blank">timberland.com</a>
             </div>
             <img src="./images/mountain_forest.png" alt="Pic: New Hamphire" class="place__image">
-            <div class="place__text_container">
+            <div class="place__text-container">
               <p class="place__text">There's no better place to lose yourself in nature than in springtime New Hampshire. As 
               serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to the 
               South. So enjoy it while it lasts.</p>
@@ -110,7 +110,7 @@
               <a href="https://www.ge.com/about_us" class="place__url" target="_blank">ge.com</a>
             </div>
             <img src="./images/city_streets.png" alt="Pic: New York" class="place__image">
-            <div class="place__text_container">
+            <div class="place__text-container">
               <p class="place__text">Not only famous for “The Big Apple,” the state of NY also has several other reasons for 
                 going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been 
                 home to the world_famous General Electric Company.</p>
@@ -126,7 +126,7 @@
               <a href="https://www.fws.gov/refuge/erie/" class="place__url" target="_blank">www.fws.gov</a>
             </div>
             <img src="./images/FLW_house.png" alt="Pic: Pennsylvania" class="place__image">
-            <div class="place__text_container">
+            <div class="place__text-container">
               <p class="place__text">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be from
                 time to time, is another town worth passing through for several different reasons. While it might be most 
                 famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war, Pennsylvania
@@ -145,7 +145,7 @@
               <a href="https://www.cedarpoint.com/" class="place__url" target="_blank">cedarpoint.com</a>
               </div>
               <img src="./images/windmill.png" alt="Pic: Ohio" class="place__image">
-              <div class="place__text_container">
+              <div class="place__text-container">
                 <p class="place__text">From the college capital of Columbus to the clean coastline of Cleveland, Ohio is a truly 
                 hidden gem. Earthquakes are surprisingly common in this particular region of North America, over 200 of which 
                 have registered with a magnitude of 2 or higher since 1776. However, earthquakes aren't the only thing shaking 
@@ -168,11 +168,9 @@
                 <img src="./images/youtube/cyclists.png" alt="cyclists on trail" class="video__image">
                 <div class="video__content">
                   <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
-                  <!--<div class="video__text">-->
                     <p class="video__duration">5:27</p>
                     <h3 class="video__name">RAGBRAI, Iowa</h3>
                     <p class="video__author">Author: Ryan Van Duzer</p>
-                 <!--</div>-->
                 </div>
               </a>
             </li>
@@ -181,11 +179,9 @@
                 <img src="./images/youtube/Old_Faithful.png" alt="Pic: Old Faithful geyser" class="video__image">
                 <div class="video__content">
                   <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
-                    <!--<div class="video__text">-->
                       <p class="video__duration">2:36</p>
                       <h3 class="video__name">Old Faithful Geyser, Wyoming</h3>
                       <p class="video__author">Author: David Ellis</p>
-                    <!--</div>-->
                 </div>
               </a>
             </li>
