--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>From Portland to Portland</title>
   <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
+<body class="body">
   <!--container for site-->
   <div class="page">
     <header class="header">
@@ -215,11 +215,12 @@
       </section>
       <!--This is the cover section-->
       <section class="cover">
-        <img src="./images/desert-highway.jpg" alt="Desert highway" class="cover__image">
-        <div class="cover__text">
+        <a class="cover__link"  href="https://www.nps.gov/nr/travel/route66/maps66.html">
+        <!--<img src="./images/desert-highway.jpg" alt="Desert highway" class="cover__image">
+        <!--<div class="cover__text">-->
           <h2 class="cover__title">Historic Route 66</h2>
           <p class="cover__subtitle">The Main Street of America from&nbsp;Santa&nbsp;Monica, Cal. to Chicago, Ill. within an iframe</p>
-        </div>
+        <!--</div>--></a>
       </section>
     </main>
     <!--footer-->
