--- a/index.html
+++ b/index.html
@@ -158,6 +158,65 @@
           </li>
         </ul>
       </section>
+      <!--This is the section that has the videos with overlayed captions and play buttons-->
+      <section class="video">
+        <h2 class="video__title">Cycling & Spouting</h2>
+        <p class="video__subtitle">The largest bike-touring event in the world and the most famous geyser of Yellowstone National Park</p>
+          <ul class="video__container">
+            <li class="video__item">
+              <a href="https://www.youtube.com/watch?v=2eCG6Ozz-oE" class="video__link" target="_blank">
+                <img src="./images/youtube/cyclists.png" alt="cyclists on trail" class="video__image">
+                <div class="video__content">
+                  <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
+                  <div class="video__text">
+                    <p class="video__duration">5:27</p>
+                    <h3 class="video__name">RAGBRAI, Iowa</h3>
+                    <p class="video__author">Author: Ryan Van Duzer</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="video__item">
+              <a href="https://www.youtube.com/watch?v=4mZY7uxb7Gc" class="video__link" target="_blank">
+                <img src="./images/youtube/Old_Faithful.png" alt="Pic: Old Faithful geyser" class="video__image">
+                <div class="video__content">
+                  <img src="./images/__icon_play.svg" class="video__icon" alt="Play Icon">
+                  <div class="video__text">
+                    <p class="video__duration">2:36</p>
+                    <h3 class="video__name">Old Faithful Geyser, Wyoming</h3>
+                    <p class="video__author">Author: David Ellis</p>
+                  </div>
+                </div>
+              </a>
+            </li>
+          </ul>
+      </section>
+      <!--This is the section that has the comments of three people-->
+      <section class="comments">
+        <h2 class="comments__title">Three influential people</h2>
+        <p class="comments__subtitle">These 3 Americans have each impacted the world in very individual ways</p>
+        <ul class="comments__container">
+          <li class="comments__item">
+            <img src="./images/Beatrice_Morrow_Cannady.png" alt="Image of Beatrice Morrow Cannady" class="comments__image">
+            <h3 class="comments__author">Beatrice Morrow Cannady, Portland, Oregon</h3>
+            <p class="comments__quote">It is the duty of the Negro woman to see that in the home there are histories of her race 
+            written by Negro historians.</p>
+          </li>
+          <li class="comments__item">
+            <img src="./images/Jane_Addams.png" alt="Image of Jane Addams" class="comments__image">
+            <h3 class="comments__author">Jane Addams, Cedarville, Illinois</h3>
+            <p class="comments__quote">The good we secure for ourselves is precarious and uncertain, is floating in mid-air, until 
+            it is secured for all of us
+            and incorporated into our common life.</p>
+          </li>
+          <li class="comments__item">
+            <img src="./images/Stephen_King.png" alt="Image of Stephen King" class="comments__image">
+            <h3 class="comments__author">Stephen King, born in Portland, Maine</h3>
+            <p class="comments__quote">Books are the perfect entertainment: no commercials, no batteries, hours of enjoyment for 
+            each dollar spent.</p>
+          </li>
+        </ul>
+      </section>
       <!--This is the cover section-->
       <section class="cover">
         <a class="cover__link"  href="https://www.nps.gov/nr/travel/route66/maps66.html">
